# METAai

./: .env.example  .gitignore  CHANGELOG.md  DECISIONS.md  EXPERIMENTS.md  FIXES.md  README.md  REFLEXION_LOG.md  SOLUTION_PATTERNS.md  audit.sh  audit_project.py  batch_review.py  bayes.py  chat_raw.txt  costs.py  dashboard.html  dashboard.py  diag_miner.py  entropy.py  extract_doc.py  extract_docx.ps1  extract_docx.py  fix_tracker.py  impact.py  kolmogorov.py  make_freshcut.py  make_krishnamurti.py  make_omi_analysis.py  make_omi_brandbook.py  make_pdf.py  make_philosophy.py  make_report.py  odt_content.txt  omi_content.txt  pareto.py  pyproject.toml  query_users.py  read_odt.py  read_omi.py  report_part1_intro.json  (+19 more)
.agent/: context_manifest.yaml
agents/: __init__.py  acquire_scanner.py  action_generator.py  agent_generator.py  auto_committer.py  auto_reflection.py  changelog_enforcer.py  competitor_tracker.py  compliance_checker.py  conductor.py  config.py  config_evolver.py  content_generator.py  correlator.py  cost_monitor.py  deal_evaluator.py  decision_watchdog.py  dependency_scanner.py  drift_predictor.py  email_automator.py  event_watcher.py  experiment_tracker.py  feature_radar.py  feed_aggregator.py  feedback_parser.py  git_analytics.py  health_monitor.py  idea_scorer.py  knowledge_distiller.py  llm_reasoner.py  lock_generator.py  market_scanner.py  obsidian_pulse.py  opportunity_engine.py  opportunity_radar.py  perf_benchmarker.py  ph_tracker.py  portfolio_tracker.py  pricing_monitor.py  release_manager.py  (+16 more)
audits/: audit_familyquest.py
deploy/: pre-push  (+2 more)
(+156 files in other folders)
