[project]
name = "metaai"
version = "0.1.0"
description = "AI-Powered Solo Development Framework — Multi-Agent Code Quality Pipeline"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
review = "review:main"
